<resources>
    <string name="app_name">Sayan</string>
    <string name="title_home">မူလေနရာ</string>
    <string name="daily">ေန႔စဥ္</string>
    <string name="title_dashboard">မွတ္တမ္းမ်ား</string>
    <string name="setting">အျပင္အဆင္</string>
    <string name="income">ဝင္ေငြ</string>
    <string name="_0000">၀၀၀၀</string>
    <string name="ks">က်ပ္</string>
    <string name="outcome">ထြက္ေငြ</string>
    <string name="profit">လက္က်န္</string>
    <string name="insert">သိမ္းဆည္းမည္</string>
    <string name="update">ျပဳျပင္မည္</string>
    <string name="delete">ဖ်က္သိမ္းမည္</string>
    <string name="sayan">စာရင္း</string>
    <string name="title">အေၾကာင္းအရာ</string>
    <string name="amount">ေငြပမာဏ</string>
    <string name="type">အမ်ိဳးအစား</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="day">ရက္</string>
    <string name="month">လ</string>
    <string name="year">ခုႏွစ္</string>
    <string name="today">ႏွစ္</string>
    <string name="monthly">လခ်ဳပ္</string>
    <string name="yearly">ႏွစ္ခ်ဳပ္</string>
    <string name="choose">ေရြးခ်ယ္ပါ</string>
    <string name="submit">ထုတ္ၾကည့္မည္</string>
    <string name="from">မွ</string>
    <string name="to">အထိ</string>
    <string name="list">အေသးစိတ္ၾကည့္မည္</string>
    <string name="guest">Guest</string>
    <string name="id">id=?</string>
    <string name="password">Password</string>
    <string name="language">Language</string>
    <string name="unicode">Unicode</string>
    <string name="zawgyi">Zawgyi</string>
    <string name="total">စုစုေပါင္း</string>
    <string name="cancel">မလုပ္ေတာ့ပါ</string>
    <string name="ok">လုပ္မည္</string>
    <string name="add_new">အသစ္ထပ္ထည့္မည္</string>
    <string name="date">ရက္စြဲ</string>
    <string name="developer">Developer</string>
    <string name="copypaste673_gmail_com">copypaste673@gmail.com</string>
    <string name="database">Database</string>
    <string name="kyaw_thu">Kyaw Thu</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="CurrentP">ေက်းဇူးျပဳ၍ လ်ိဳ႕ဝွက္နံပါတ္ ႐ိုက္ထည့္ပါ</string>
    <string name="ConfirmP">အတည္ျပဳရန္ ေနာက္တႀကိမ္ ႐ိုက္ထည့္ပါ</string>
    <string name="WrongP">အတည္ျပဳ နံပါတ္မွားယြင္းေနပါသည္</string>
    <string name="password_not">လ်ိဳ႕ဝွက္နံပါတ္ထားမည္</string>
    <string name="password_has">လ်ိဳ႕ဝွက္နံပါတ္ခံထားသည္</string>
    <string name="password_remove">လ်ိဳ႕ဝွက္နံပါတ္ ပယ္ဖ်က္မည္</string>
    <string name="version_1_0_0">Version : 1.0.0</string>
    <string name="today_income">ယေန႔ ဝင္ေငြ</string>
    <string name="today_outcome">ယေန႔ ထြက္ေငြ</string>
    <string name="choose_one">Choose</string>
    <string name="percent">%</string>
    <string name="average">Average</string>
    <string name="spend">ယေန႔ အသံုးျပဳေငြ စုစုေပါင္း</string>
    <string name="left">ပ်မ္းမ်ွအသံုးစာရိတ္ က်န္ေငြ</string>
    <string name="daily_average">တေန႔တာ ပ်မ္းမ်ွအသံုးစာရိတ္</string>
    <string name="over_daily_average_rate_ks">တေန႔တာ ပ်မ္းမ်ွအသံုးစာရိတ္ ထက္ေက်ာ္လြန္ေသာ ေငြပမာဏ</string>
    <string name="g">G</string>
    <string name="account">Account</string>
    <string name="piechart">PieChart</string>
</resources>