<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_1sdp"
        app:cardCornerRadius="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/color"
            android:padding="@dimen/_10sdp"
            android:orientation="vertical"
            android:background="@color/colorIncome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/type"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                android:text="@string/type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/title"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                android:text="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/amount"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                android:text="@string/amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/date"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_14ssp"
                android:text="@string/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>