<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SayanActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/back"
            android:background="?selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/back"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_weight="1"
            android:text="@string/sayan"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/insert"
            android:background="?selectableItemBackground"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp"
            android:text="@string/insert"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_14ssp"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/corner_radius_bound"
        android:padding="@dimen/_10sdp"
        android:layout_margin="@dimen/_15sdp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <TextView
            android:id="@+id/t2"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/date"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:id="@+id/datePicker"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="UseCompoundDrawables">
            <TextView
                android:textSize="@dimen/_12ssp"
                android:id="@+id/date"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/_00_00_0000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:src="@drawable/down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/colorTextPrimary"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@drawable/corner_radius_bound"
        android:padding="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">
        <TextView
            android:id="@+id/t3"
            android:textSize="@dimen/_12ssp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/choose"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <RadioGroup
            android:id="@+id/radio"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <RadioButton
                android:textSize="@dimen/_12ssp"
                android:checked="true"
                android:id="@+id/outcome"
                android:text="@string/outcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <RadioButton
                android:textSize="@dimen/_12ssp"
                android:id="@+id/income"
                android:text="@string/income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RadioGroup>
    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Spinner
            android:background="@drawable/corner_radius_bound"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_12ssp"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/type"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"/>
        <TextView
            android:id="@+id/t4"
            android:background="@color/colorWhite"
            android:layout_marginRight="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toTopOf="@id/type"
            app:layout_constraintBottom_toTopOf="@id/type"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title"
            android:inputType="text"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/corner_radius_bound"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorTextSecondary"
            android:hint="@string/title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            tools:ignore="Autofill" />
        <TextView
            android:id="@+id/t5"
            android:background="@color/colorWhite"
            android:layout_marginRight="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintBottom_toTopOf="@id/title"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/amount"
            android:inputType="number"
            android:layout_margin="@dimen/_15sdp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/_12ssp"
            android:background="@drawable/corner_radius_bound"
            android:padding="@dimen/_10sdp"
            android:textColorHint="@color/colorTextSecondary"
            android:hint="@string/amount"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            tools:ignore="Autofill" />
        <TextView
            android:id="@+id/t6"
            android:background="@color/colorWhite"
            android:layout_marginRight="@dimen/_25sdp"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintTop_toTopOf="@id/amount"
            app:layout_constraintBottom_toTopOf="@id/amount"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>