<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.FontActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_gravity="bottom"
            android:padding="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@drawable/language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:tint="@color/colorWhite"
                android:contentDescription="@string/app_name" />
            <View
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"/>
            <TextView
                android:layout_weight="1"
                android:textSize="@dimen/_16ssp"
                android:textColor="@color/colorWhite"
                android:text="@string/language"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </LinearLayout>
    <RadioGroup
        android:id="@+id/font"
        android:padding="@dimen/_20sdp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/zawgyi"
            android:checked="true"
            android:text="@string/zawgyi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"/>
        <RadioButton
            android:id="@+id/unicode"
            android:text="@string/unicode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/submit"
            android:gravity="center_vertical"
            android:layout_gravity="bottom"
            android:padding="@dimen/_15sdp"
            android:background="@color/colorPrimary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="UnusedAttribute">
            <LinearLayout
                android:background="?selectableItemBackground"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="@dimen/_14ssp"
                    android:gravity="center"
                    android:text="@string/choose_one"
                    android:textColor="@color/colorWhite"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>
                <ImageView
                    android:src="@drawable/forward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:tint="@color/colorWhite"
                    android:contentDescription="@string/app_name" />
            </LinearLayout>
        </LinearLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</LinearLayout>