<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:gravity="center_vertical"
        android:layout_margin="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/type"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/colorTextPrimary"
            android:text="@string/type"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/close"
            android:src="@drawable/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/colorTextPrimary" />

    </LinearLayout>


    <LinearLayout
        android:layout_margin="@dimen/_15sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/delete"
            android:background="@color/colorOutcome"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorWhite"
            android:text="@string/delete"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="@dimen/_10sdp"
            android:layout_height="@dimen/_10sdp"/>
        <TextView
            android:id="@+id/update"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:textSize="@dimen/_14ssp"
            android:textColor="@color/colorWhite"
            android:text="@string/update"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>